# roomschool

./: .gitignore  README.md  pyproject.toml  test.md  test.txt  Диаграмма без названия.drawio
apps/auth-service/: pyproject.toml
apps/auth-service/app/: main.py
apps/auth-service/app/api/: __init__.py  addresses_api.py  auth.py  base_api.py  cities_api.py
apps/auth-service/app/api/mixins/: __init__.py  base_mixin.py  crud_mixin.py
apps/auth-service/app/api/routers/: __init__.py  accounts_api.py  addresses_api.py  auth_api.py  cities_api.py  persons_api.py  roles_api.py
apps/auth-service/app/core/: config.py  db.py  dependencies.py  enums.py  exceptions.py  security.py  utils.py  validators.py
apps/auth-service/app/middlewares/: __init__.py  error_handler.py  request_timer.py  security_headers.py
apps/auth-service/app/models/: __init__.py  account_roles_model.py  accounts_model.py  addresses_model.py  base_model.py  cities_model.py  persons_model.py  roles_model.py  tokens_model.py
apps/auth-service/app/repositories/: __init__.py  accounts_crud.py  addresses_crud.py  base_crud.py  cities_crud.py  cities_repo.py  persons_crud.py  roles_crud.py
apps/auth-service/app/schemas/: __init__.py  accounts_schema.py  addresses_schema.py  cities_schema.py  persons_schema.py  roles_schema.py
apps/auth-service/app/services/: __init__.py  accounts_service.py  addresses_service.py  auth_service.py  base_service.py  cities_service.py  persons_service.py  roles_service.py
apps/roomschool/: pyproject.toml  settings.toml
apps/roomschool/app/: main.py
apps/roomschool/app/api/: __init__.py  articles.py  callbacks.py  courses.py  posts.py
apps/roomschool/app/clients/: __init__.py  admin_client.py
apps/roomschool/app/core/: config.py  db.py  enums.py  exceptions.py  validators.py
apps/roomschool/app/models/: __init__.py  articles.py  authors.py  base.py  courses.py  posts.py  reviews.py  t.md
apps/roomschool/app/repositories/: __init__.py  articles.py  authors.py  base.py  courses.py  posts.py
apps/roomschool/app/schemas/: __init__.py  articles.py  authors.py  callbacks.py  courses.py  posts.py  reviews.py
apps/roomschool/app/services/: __init__.py  articles.py  authors.py  callbacks.py  courses.py  posts.py
apps/student-office-app/: pyproject.toml
apps/student-office-app/app/api/: profile.py
apps/student-office-app/app/core/: app_settings.py  utils.py
apps/student-office-app/app/schemas/: profile.py
frontend/: course-detail.html  index.html  login.html  test.html
ml/: main.py
student-office-app/: pyproject.toml  settings.toml
(+54 files in other folders)
