[project]
name = "roomschool"
version = "0.1.0"
description = ""
authors = [
    {name = "Yura Mishin",email = "robothot@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "dynaconf (>=3.2.11,<4.0.0)",
    "grpcio-tools (>=1.73.1,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
